--- a/ch02/index.html
+++ b/ch02/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Wolfgang Amadeus Mozart</h1>
-    <img src="mozart.jpg" alt="Portrait of Wolfgang Amadeus Mozart">
+    <img src="mozart.jpg" alt="Portrait of Wolfgang Amadeus Mozart"
     <p>Wolfgang Amadeus Mozart was a prolific and influential composer 
         of the Classical period. He was born in 1756 and died in 1791. 
         Despite his short life, his rapid pace of composition resulted in 
