--- a/ch03/town_hall/index.html
+++ b/ch03/town_hall/index.html
@@ -7,9 +7,10 @@
 	<link rel="icon" href="images/favicon.ico">
 </head>
 <body>
+	<img src="images/town_hall_logo.gif" alt="Town Hall Logo" height="80">
 	<header>
-		San Joaquin Valley Town Hall
-		Celebrating our 75th Year		
+		<h2>San Joaquin Valley Town Hall </h2>
+		<h3>Celebrating our 75th Year</h3>		
 	</header>
 	<main>
 		
