--- a/ch06/town_hall/speakers/sampson.html
+++ b/ch06/town_hall/speakers/sampson.html
@@ -26,6 +26,7 @@
 			<img src="../images/chua75.jpg" alt="Amy Chua photo">
 			<h3>February<br><a href="../speakers/sampson.html">Scott Sampson</a></h3>
 			<img src="../images/sampson75.jpg" alt="Scott Sampson photo">
+			<h3><a href="../index.html">Return to Home Page</a></h3>
 		</aside>
 		<section class="speaker">
 			<h1>Fossil Threads in the Web of Life</h1>
