--- a/ch07/town_hall/index.html
+++ b/ch07/town_hall/index.html
@@ -15,6 +15,17 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <em class="large">75</em><sup>th</sup> Year</h3>
 	</header>
+
+	<nav class="navbar">
+		<ul class="menu">
+			<li><a class="current">Home</a></li>
+			<li><a href="#">Speakers</a></li>
+			<li><a href="#">Luncheons</a></li>
+			<li><a href="#">Tickets</a></li>
+			<li><a href="#">About Us</a></li>
+		</ul>
+	</nav>
+
 	<main>
 		<aside>
 			<h2>Guest speakers</h2>
