--- a/ch08/town_hall/index.html
+++ b/ch08/town_hall/index.html
@@ -16,30 +16,32 @@
 		<h3>Celebrating our <em class="large">75</em><sup>th</sup> Year</h3>
 	</header>
 	<nav class="navbar">
+		<input type="checkbox" id="menu-toggle">
+		<label for="menu-toggle" class="menu-btn">&#9776;</label>
 		<ul class="menu">
-			<li><a class="current">Home</a></li>
-			<li class="submenu">
-				<a href="#">Speakers<small>&#9660;</small></a>
-				<ul class="dropdown">
-					<li><a href="speakers/brancaccio.html">David Brancaccio</a></li>
-					<li><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></li>
-					<li><a href="speakers/chua.html">Amy Chua</a></li>
-					<li><a href="speakers/sampson.html">Scott Sampson</a></li>
-				</ul>
-			</li>
-			<li><a href="#">Luncheons</a></li>
-			<li><a href="#">Tickets</a></li>
-			<li class="submenu">
-				<a href="#">About Us<small>&#9660;</small></a>
-				<ul class="dropdown">
-					<li><a href="#">Our History</a></li>
-					<li><a href="#">Board of Directors</a></li>
-					<li><a href="#">Past Speakers</a></li>
-					<li><a href="#">Contact Us</a></li>
-				</ul>
-			</li>
+		  <li><a class="current">Home</a></li>
+		  <li class="submenu">
+			<a href="#">Speakers</a>
+			<ul class="dropdown">
+			  <li><a href="speakers/brancaccio.html">David Brancaccio</a></li>
+			  <li><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></li>
+			  <li><a href="speakers/chua.html">Amy Chua</a></li>
+			  <li><a href="speakers/sampson.html">Scott Sampson</a></li>
+			</ul>
+		  </li>
+		  <li><a href="#">Luncheons</a></li>
+		  <li><a href="#">Tickets</a></li>
+		  <li class="submenu">
+			<a href="#">About Us</a>
+			<ul class="dropdown">
+			  <li><a href="#">Our History</a></li>
+			  <li><a href="#">Board of Directors</a></li>
+			  <li><a href="#">Past Speakers</a></li>
+			  <li><a href="#">Contact Us</a></li>
+			</ul>
+		  </li>
 		</ul>
-	</nav>
+	  </nav>	  
 	<main>
 		<aside>
 			<h2>Guest speakers</h2>
