--- a/ch09/town_hall/index.html
+++ b/ch09/town_hall/index.html
@@ -15,12 +15,13 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <em class="large">75</em><sup>th</sup> Year</h3>
 	</header>
+
 	<nav class="navbar">
 		<input type="checkbox" id="checkbox-toggle" />
     	<label for="checkbox-toggle" class="menu-btn"></label>
 
 		<ul class="menu">
-			<li><a class="current">Home</a></li>
+			<li><a class="current" href="index.html">Home</a></li>
 			<li><a href="#">Speakers<small></small></a>
 				<ul class="submenu">
 					<li><a href="speakers/brancaccio.html">David Brancaccio</a></li>
@@ -41,6 +42,7 @@
 			</li>
 		</ul>
 	</nav>
+
 	<main>
 		<aside>
 			<h2>Guest speakers</h2>
@@ -66,7 +68,7 @@
 				Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research 
 				has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted 
 				fieldwork in a number of countries in Africa.</p>
-				<p><a href="speakers/sampson.html">Read more...</a>&nbsp;<strong>Or meet us there!</strong></p>
+				<p><a href="speakers/sampson.html">Read more... </a><a href="media/sampson.mp4">Or play a video!</a></p>
 			</article>
 
 			<h2>Our Ticket Packages</h2>
@@ -75,10 +77,12 @@
 				<li>Patron Package: $200</li>
 				<li>Single Speaker: $25</li>
 			</ul>
-		</section>	
+		</section>
 	</main>
+
 	<footer>
 		<p>&copy; San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 	</footer>
 </body>
+
 </html>
