main and html change

--- a/ch11/town_hall/luncheons.html
+++ b/ch11/town_hall/luncheons.html
@@ -63,9 +63,76 @@
 			<p>These tickets can be ordered at the same time as the season lecture ticket.</p>
 			<h2>Individual luncheon tickets: $25</h2>
 			<p>A limited number of these tickets are available and can be purchased by calling 
-			559.555.1212. These tickets must be purchased by the Friday prior to the lecture.</p>
+			559.555.1212. These tickets must be purchased by the Friday prior to the lecture.</p>	
+		<figure id="luncheon-schedule">
+		<figcaption><h2>The luncheon schedule</h2></figcaption>
+			<table aria-labelledby="luncheon-schedule">
+				<thead>
+				<tr>
+					<th scope="col">Season</th>
+					<th scope="col">Date</th>
+					<th scope="col">Speaker</th>
+					<th scope="col">Cost</th>
+				</tr>
+				</thead>
+				<tbody>
+				<tr>
+					<th scope="row" rowspan="2">Fall</th>
+					<td>October 19</td>
+					<td>David Brancaccio</td>
+					<td>$25</td>
+				</tr>
+				<tr>
+					<td>November 16</td>
+					<td>Andrew Ross Sorkin</td>
+					<td>$25</td>
+				</tr>
+				<tr class="divider"></tr>
+				<tr>
+					<th scope="row" rowspan="3">Winter</th>
+					<td>January 18</td>
+					<td>Amy Chua</td>
+					<td>$25</td>
+				</tr>
+				<tr>
+					<td>February 16</td>
+					<td>Scott Sampson</td>
+					<td>$25</td>
+				</tr>
+				<tr>
+					<td>March 13</td>
+					<td>Carlos Eire</td>
+					<td>$25</td>
+				</tr>
+				<tr class="divider"></tr>
+				<tr>
+					<th scope="row">Spring</th>
+					<td>April 18</td>
+					<td>Ronan Tynan</td>
+					<td>$25</td>
+				</tr>
+				<tr class="divider"></tr>
+				</tbody>
+					<tfoot>
+					<tr>
+						<td colspan="2"></td>
+						<td class="bold-label">Cost of 6 individual luncheon tickets</td>
+						<td>$150</td>
+					</tr>
+					<tr class="divider">
+						<td colspan="2"></td>
+						<td class="bold-label">Cost of a season luncheon ticket</td>
+						<td>$120</td>
+					</tr>
+					<tr class="divider">
+						<td colspan="2"></td>
+						<td class="bold-label">Savings</td>
+						<td>$30</td>
+					</tr>
+					</tfoot>
+				</table>
+			</figure>
  		</section>
-		
 	</main>
 	<footer>
 		<p>&copy; San Joaquin Valley Town Hall, Fresno, CA 93755</p>
