--- a/ch11/town_hall/luncheons.html
+++ b/ch11/town_hall/luncheons.html
@@ -127,7 +127,7 @@
 					<tr class="divider">
 						<td colspan="2"></td>
 						<td class="bold-label">Savings</td>
-						<td>$30</td>
+						<td class="bold-label">$30</td>
 					</tr>
 					</tfoot>
 				</table>
