--- a/ch12/town_hall/tickets.html
+++ b/ch12/town_hall/tickets.html
@@ -15,9 +15,10 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <em class="large">75</em><sup>th</sup> Year</h3>
 	</header>
+
 	<nav class="navbar">
-		<input type="checkbox" id="checkbox-toggle" />
-    	<label for="checkbox-toggle" class="menu-btn"></label>
+		<input type="checkbox" id="checkbox-toggle">
+		<label for="checkbox-toggle" class="menu-btn"></label>
 
 		<ul class="menu">
 			<li><a href="#">Home</a></li>
@@ -41,41 +42,115 @@
 			</li>
 		</ul>
 	</nav>
-    <main>
+
+	<main>
 		<aside>
 			<h2>Guest speakers</h2>
 			<div id="speakers">
-			<h3>October<br><a href="speakers/brancaccio.html">David Brancaccio</a></h3>
-			<img src="images/brancaccio75.jpg" alt="David Brancaccio photo">
-			<h3>November<br><a href="../speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
-			<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
-			<h3>January<br><a href="../speakers/chua.html">Amy Chua</a></h3>
-			<img src="images/chua75.jpg" alt="Amy Chua photo">
-			<h3>February<br><a href="../speakers/sampson.html">Scott Sampson</a></h3>
-			<img src="images/sampson75.jpg" alt="Scott Sampson photo">
+				<h3>October<br><a href="speakers/brancaccio.html">David Brancaccio</a></h3>
+				<img src="images/brancaccio75.jpg" alt="David Brancaccio photo">
+				<h3>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
+				<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
+				<h3>January<br><a href="speakers/chua.html">Amy Chua</a></h3>
+				<img src="images/chua75.jpg" alt="Amy Chua photo">
+				<h3>February<br><a href="speakers/sampson.html">Scott Sampson</a></h3>
+				<img src="images/sampson75.jpg" alt="Scott Sampson photo">
 			</div>
 		</aside>
+
 		<section>
 			<h1>Order Form</h1>
-			<form action="order_tickets.html" method="get">
+
+			<form action="order_tickets.html" method="post">
+
 				<fieldset>
 					<legend>Member Information</legend>
-					
+
 					<label for="first_name">First Name:</label>
-					<input type="text" name="first_name" id="first_name">
+					<input type="text" name="first_name" id="first_name" required autofocus>
 
 					<label for="last_name">Last Name:</label>
-					<input type="text" name="last_name" id="last_name">
+					<input type="text" name="last_name" id="last_name" required>
 
 					<label for="email">E-Mail:</label>
-					<input type="email" name="email" id="email">
+					<input type="email" name="email" id="email" required>
 
-					<label for="phone" >Phone Number:</label>
-					<input type="tel" name="phone" id="phone">
+					<label for="phone">Phone Number:</label>
+					<input type="tel" name="phone" id="phone"
+						   placeholder="999-999-9999"
+						   pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+						   title="Format: 999-999-9999">
 				</fieldset>
+
+				<fieldset>
+					<legend>Ordering Information</legend>
+
+					<label for="order_type">Order Type:</label>
+					<select name="order_type" id="order_type" required>
+						<option value="base">Base Package</option>
+						<option value="upgrade">Upgraded Package</option>
+						<option value="premium">Premium Package</option>
+					</select>
+
+					<label for="quantity">Number of Tickets:</label>
+					<input type="number" name="quantity" id="quantity"
+						   value="1" min="1" max="100" required>
+				</fieldset>
+
+				<fieldset>
+					<legend>Payment Information</legend>
+
+					<label for="card_type">Card Type:</label>
+					<select name="card_type" id="card_type" required>
+						<option value="visa">Visa</option>
+						<option value="mastercard">Master Card</option>
+						<option value="discover">Discover</option>
+					</select>
+
+					<label for="card_num">Credit Card Number:</label>
+					<input type="text" name="card_num" id="card_num"
+						   placeholder="16 digits"
+						   pattern="[0-9]{16}"
+						   title="Credit-card number must be exactly 16 digits"
+						   required>
+
+					<div class="expiration-group">
+						<div>
+						<label for="exp_month">Expiration Month:</label>
+						<select name="exp_month" id="exp_month" required>
+							<option value="">Month</option>
+							<option value="01">January</option>
+							<option value="02">February</option>
+							<option value="03">March</option>
+							<option value="04">April</option>
+							<option value="05">May</option>
+							<option value="06">June</option>
+							<option value="07">July</option>
+							<option value="08">August</option>
+							<option value="09">September</option>
+							<option value="10">October</option>
+							<option value="11">November</option>
+							<option value="12">December</option>
+						</select>
+						</div>
+
+						<div>
+						<label for="exp_year">Expiration Year:</label>
+						<select name="exp_year" id="exp_year" required>
+							<option value="">Year</option>
+							<option value="2025">2025</option>
+							<option value="2026">2026</option>
+							<option value="2027">2027</option>
+						</select>
+						</div>
+					</div>
+					</fieldset>
+
+				<button type="submit">Submit</button>
 			</form>
 		</section>
 	</main>
+
 	<footer>
 		<p>&copy; San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 	</footer>
