index and main change

--- a/ch13/town_hall/index.html
+++ b/ch13/town_hall/index.html
@@ -66,7 +66,9 @@
 			<h1>Featured Speaker</h1>
 			<article class="featured">
 				<h2>Fossil Threads in the Web of Life</h2>
-				<img src="images/sampson_dinosaur.jpg" alt="Scott Sampson with dinosaur">
+				<video controls poster="../images/sampson_dinosaur.jpg">
+					<source src="../media/sampson.mp4" type="video/mp4">
+			</video>
 				<h3>February<br>
 				Scott Sampson</h3>
 				<p>What's 75 million years old and brand spanking new? A teenage Utahceratops! 
