--- a/ch13/town_hall/speakers/sampson.html
+++ b/ch13/town_hall/speakers/sampson.html
@@ -53,7 +53,12 @@
 			<img src="../images/sampson75.jpg" alt="Scott Sampson photo">
 		</aside>
 		<section>
+
 			<h1>Fossil Threads in the Web of Life</h1>
+			<video controls poster="../images/sampson_dinosaur.jpg">
+				<source src="../media/sampson.mp4" type="video/mp4">
+			</video>
+
 			<article>
 				<h2>February<br>Scott Sampson</h2>
 				<p>What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the 
