--- a/ch15/town_hall/index.html
+++ b/ch15/town_hall/index.html
@@ -20,7 +20,7 @@
     	<label for="checkbox-toggle" class="menu-btn"></label>
 
 		<ul class="menu">
-			<li><a class="current">Home</a></li>
+			<li><a>Home</a></li>
 			<li><a href="#">Speakers<small></small></a>
 				<ul class="submenu">
 					<li><a href="speakers/brancaccio.html">David Brancaccio</a></li>
