--- a/ch15/town_hall/speakers/sampson.html
+++ b/ch15/town_hall/speakers/sampson.html
@@ -21,12 +21,12 @@
 
 		<ul class="menu">
 			<li><a href="../index.html">Home</a></li>
-			<li><a class="current">Speakers<small></small></a>
+			<li><a>Speakers<small></small></a>
 				<ul class="submenu">
 					<li><a href="../speakers/brancaccio.html">David Brancaccio</a></li>
 					<li><a href="../speakers/sorkin.html">Andrew Ross Sorkin</a></li>
 					<li><a href="../speakers/chua.html">Amy Chua</a></li>
-					<li><a class="current">Scott Sampson</a></li>
+					<li><a>Scott Sampson</a></li>
 				</ul>
 			</li>
 			<li><a href="#">Luncheons</a></li>
